<resources>
    <string name="app_name">redito</string>
    <string name="title_activity_login">Login</string>

    <string name="registrar">registrar</string>
    <string name="entrar">entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="repetir_senha">Repetir senha</string>
    <string name="title_activity_register">Registrar</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="delete">Delete</string>
    <string name="enviar">enviar</string>
    <string name="mensagem">Mensagem</string>
    <string name="logout">LogOut</string>
</resources>